little html positioning correction

--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -3,7 +3,7 @@
     "DAILY_RATE": "Günlük Ücret",
     "RATING": "Puan",
     "SEARCH": "Ara",
-    "SEND_OFFER": "Teklif Gönder",
+    "SEND_OFFER": "Teklif Yap",
     "OFFER_SENT": "Teklif Gönderildi",
     "REVIEWS": "Değerlendirme",
     "DELIVERIES": "Teslim Adedi",
